[build-system]
requires      = ["setuptools", "setuptools-scm", "wheel", "pip"]
build-backend = "setuptools.build_meta"

[project]
name            = "sdbx"
dynamic         = ["version", "dependencies"]
description     = "A powerful and modular stable diffusion GUI with a graph/nodes interface."
authors         = [{ name = "darkshapes" }]
requires-python = ">= 3.11"

[project.optional-dependencies]
core = [
    "nnll[nnll-01,nnll-04, nnll-05,nnll-49, nnll-62] @ git+https://github.com/darkshapes/nnll@main", # Machine learning libraries

    # Server libraries     # (torch, torchvision, and torchaudio version are determined by system in setup.py)
    "fastapi",
    "uvicorn",
    "watchfiles",
    "websockets",

    # Environment management
    "dulwich",
    "virtualenv",

    # Data validation
    "pydantic_settings",
]
dev = [
    # Testing frameworks and tools
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
sdbx = "sdbx.__main__:main"

[tool.setuptools]
packages = ["sdbx"]

[tool.setuptools_scm]
