[build-system]
requires      = ["setuptools", "setuptools-scm", "wheel", "pip"]
build-backend = "setuptools.build_meta"

[project]
name            = "sdbx"
dynamic         = ["version", "dependencies"]
description     = "A powerful and modular stable diffusion GUI with a graph/nodes interface."
authors         = [{ name = "darkshapes" }]
requires-python = ">= 3.12"

[dependency-groups]
dev = [
    # Testing frameworks and tools
    "mir[dev] @ git+https://github.com/darkshapes/mir@main",
    "pytest",
    "pytest-asyncio",
    "ruff>=0.12.0",
    "sdbx[core]",
]

[project.optional-dependencies]
core = [
    # Machine learning libraries

    # Server libraries     # (torch, torchvision, and torchaudio version are determined by system in setup.py)
    "fastapi",
    "uvicorn",
    "watchfiles",
    "websockets",

    # Environment management
    "dulwich",
    "virtualenv",

    # Data validation
    "pydantic_settings",
    "mir[full] @ git+https://github.com/darkshapes/mir@main",
]
dev = [
    # Testing frameworks and tools
    "mir[dev] @ git+https://github.com/darkshapes/mir@main",
    "pytest",
    "pytest-asyncio",
    "sdbx[core]",
]

[project.scripts]
sdbx = "sdbx.__main__:main"

[tool.setuptools]
packages = ["sdbx"]

[tool.setuptools_scm]
